# Poker-Game

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: hand.py
backend/app/db/: connection.py
backend/app/db_access/: hand.py
backend/app/models/: hand.py
backend/app/repositories/: hand_repository.py
backend/app/schemas/: game_result.py  hand.py  to_send.py
backend/app/services/: get_hand.py  poker_logic.py
backend/tests/: test_hand.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/api/: gameGET.ts  gamePost.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActionPanel.tsx  CurrentInfoPanel.tsx  HistoryPanel.tsx  InitialLog.tsx  LogPanel.tsx  StackPanel.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/functions/: createPlayers.ts  deck.ts  formatAction.ts  gameInit.ts  getFirstToAct.ts  getNextStage.ts  nextPlayerOrRound.ts
frontend/src/tests/: play-hand.spec.ts  test-game.ts
frontend/src/types/: types.ts
postgres-init/: init_hand_log.sql
