[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Poker API"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"


dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "pydantic>=2.11.5,<3.0.0",
    "dataclasses-json>=0.6.7,<0.7.0",
    "pokerkit"                
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
